xfsprogs-2.9.8 (21 April 2008)
	- Add support for sb_features2 in wrong location in mkfs.xfs,
	  xfs_repair and xfs_db.
	- Improve memory limits for libxfs cache in xfs_repair and added
	  a -m option to manually limit usage of xfs_repair.
	- Add -c option to xfs_admin to turn lazy-counters on/off.
	- Added support for mdp in libdisk/mkfs.xfs, thanks to
	  Hubert Verstraete.
	- Add -p option to fsck.xfs, thanks to Markus Rothe.
	- Cleanup sys v3 bzero/bcopy calls, thanks to Nigel Kukard.

xfsprogs-2.9.7 (1 Mar 2008)
	- Lazy superblock counters not yet the default with mkfs.xfs.
	- Add -y (another no-op) fsck option.
	- Resolve mkfs allocation group count issue with small devices.
	- Fix mkfs to sector align the device size so zeroing the end
	  of the device doesn't fail.

xfsprogs-2.9.6 (7 Feb 2008)
	- Fix regression introduced by changing the mkfs.xfs defaults.
	- Made lazy superblock counters the default with mkfs.xfs.

xfsprogs-2.9.5 (21 Jan 2008)
	- Updated mkfs.xfs defaults.
	- Make xfs_info handle mount points with spaces.
	- Improve xfs_repair's handling of invalid freespace btree extents.
	- Rebuild directories in xfs_repair if "." and ".." aren't the first
	  two directory entries. This guarantees a directory is deletable.
	- Changed mkfs.xfs -f to wipe all old AG headers, not just the ones
	  up to the end of the new filesystem size.
	- Purged the end of device whack buffer in mkfs.xfs to prevent a
	  warning in certain device sizes.
	- Man page fixes. Thanks to Utako Kusaka <u-kusaka@wm.jp.nec.com>
	  for this.
	- Disable the ability to turn off unwritten extents in mkfs.

xfsprogs-2.9.4 (7 Sep 2007)
	- Fixed xfs_repair segfaulting with directory block size different
	  to the filesystem blocksize.
	- Fixed xfs_quota disable, enable, off and remove commands.
	  Thanks to Utako Kusaka <utako@tnes.nec.co.jp> for this.
	- Improved the robustness of xfs_metadump.
	- Fix link issues with pthread library.

xfsprogs-2.9.3 (23 July 2007)